// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar > renders WithBottom story and AppBar.Bottom is always on a new line 1`] = `
<div>
  <header
    class="w-full flex flex-wrap items-center pt-3 mb-3 gap-2 bg-white [&>[data-versaur-appbar-bottom]]:basis-full [&>[data-versaur-appbar-bottom]]:w-full [&:has([data-versaur-appbar-bottom])>[data-versaur-appbar-leading]]:pl-4 [&:has([data-versaur-appbar-bottom])>[data-versaur-appbar-trailing]]:pr-4 [&:not(:has([data-versaur-appbar-bottom]))]:px-4"
    role="banner"
  >
    <div
      class="flex items-center"
      data-versaur-appbar-leading="true"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-10 w-10 rounded-md"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left inline-flex items-center justify-center w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-col justify-center min-w-0 flex-grow items-start"
    >
      <h1
        class="text-ghost text-left line-clamp-1 truncate text-lg font-semibold"
      >
        Anywhere Demo
      </h1>
      <p
        class="text-gray-500 text-left line-clamp-1 truncate text-xs font-normal"
      >
        AppBar.Bottom can be anywhere
      </p>
    </div>
    <div
      class="flex items-center justify-end gap-2"
      data-versaur-appbar-trailing="true"
    >
      <button
        aria-label="Print"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-7 w-7 rounded-full"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-printer inline-flex items-center justify-center w-4 h-4 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M6 9V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6"
          />
          <rect
            height="8"
            rx="1"
            width="12"
            x="6"
            y="14"
          />
        </svg>
      </button>
    </div>
    <div
      class="w-full flex items-center min-h-[2.5rem] mt-2"
      data-versaur-appbar-bottom="true"
    >
      <nav
        aria-label="Tabs"
        class="relative w-full"
      >
        <div
          class="relative overflow-hidden"
        >
          <ul
            class="flex flex-row w-full border-b border-border overflow-x-auto overflow-y-visible whitespace-nowrap py-1"
            role="tablist"
          >
            <li
              role="presentation"
            >
              <a
                aria-controls="tabs-content-detail"
                aria-selected="false"
                class="flex items-center justify-center px-4 py-2 text-sm font-normal text-foreground text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none hover:text-primary"
                href="#detail"
                id="tabs-trigger-detail"
                role="tab"
              >
                Details
              </a>
            </li>
            <li
              role="presentation"
            >
              <a
                aria-controls="tabs-content-entries"
                aria-current="page"
                aria-selected="true"
                class="flex items-center justify-center px-4 py-2 text-sm text-center transition-all duration-200 border-b-2 border-transparent select-none cursor-pointer focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 focus-visible:z-10 disabled:opacity-50 disabled:pointer-events-none text-primary font-medium"
                href="#entries"
                id="tabs-trigger-entries"
                role="tab"
              >
                Entries
              </a>
            </li>
          </ul>
          <div
            aria-hidden="true"
            class="absolute bottom-0 h-0.5 rounded bg-primary transition-all duration-300 pointer-events-none"
            style="left: 0px; width: 0px;"
          />
        </div>
      </nav>
    </div>
  </header>
</div>
`;

exports[`AppBar > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <header
    class="w-full flex flex-wrap items-center pt-3 mb-3 gap-2 bg-white [&>[data-versaur-appbar-bottom]]:basis-full [&>[data-versaur-appbar-bottom]]:w-full [&:has([data-versaur-appbar-bottom])>[data-versaur-appbar-leading]]:pl-4 [&:has([data-versaur-appbar-bottom])>[data-versaur-appbar-trailing]]:pr-4 [&:not(:has([data-versaur-appbar-bottom]))]:px-4"
    role="banner"
  >
    <div
      class="flex items-center"
      data-versaur-appbar-leading="true"
    >
      <button
        aria-label="Open navigation"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-white text-foreground hover:bg-ghost-soft focus-visible:ring-ghost-light focus-visible:ring-offset-white h-10 w-10 rounded-md"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left inline-flex items-center justify-center w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex flex-col justify-center min-w-0 flex-grow items-start"
    >
      <h1
        class="text-ghost text-left line-clamp-1 truncate text-lg font-semibold"
      >
        Transaction
      </h1>
      <p
        class="text-gray-500 text-left line-clamp-1 truncate text-xs font-normal"
      >
        Period 29 May - 3 July
      </p>
    </div>
    <div
      class="flex items-center justify-end gap-2"
      data-versaur-appbar-trailing="true"
    >
      <button
        aria-label="Print"
        class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-7 w-7 rounded-full"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-printer inline-flex items-center justify-center w-4 h-4 text-white"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M6 9V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6"
          />
          <rect
            height="8"
            rx="1"
            width="12"
            x="6"
            y="14"
          />
        </svg>
      </button>
    </div>
  </header>
</DocumentFragment>
`;
